<resources>
    <string name="app_name">Telegram</string>
    <string name="phone_hint">Phone number</string>
    <string name="send_code">Send code</string>
    <string name="code_hint">Code</string>
    <string name="check_code">Check code</string>
    <string name="log_out">Log out</string>
    <string name="title_chat">Messages</string>
    <string name="phone_info">We will send an SMS with a confirmation code to your phone number</string>
    <string name="input_phone">Input phone number</string>
    <string name="toolbar_phone_title">Phone number</string>
    <string name="toolbar_country_title">Country</string>
    <string name="toolbar_code_title">Activation code</string>
    <string name="code_info">We\'ve sent an SMS with an activation code to your number</string>
    <string name="input_code">Input code</string>
    <string name="toolbar_name_title">Your name</string>
    <string name="name_info">Set up your first name and last name</string>
    <string name="first_name_hint">First name (required)</string>
    <string name="last_name_hint">Last name (optional)</string>
    <string name="error">Error</string>
    <string name="country_default_text">Choose a country</string>
    <string name="error_phone_number_invalid">Phone number is invalid</string>
    <string name="error_phone_code_empty">Code is empty</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_phone_code_invalid">Phone code is invalid</string>
    <string name="toolbar_chats">Messages</string>
    <string name="waiting_for_network">Waiting for network...</string>
</resources>
